# recipe_generator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy-beta.yml  deploy-prod.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
backend/apps/core/: models.py  ratelimit.py  schemas.py
backend/apps/core/migrations/: 0001_enable_rls_deny_all.py
backend/apps/ingredients/: models.py
backend/apps/ingredients/management/commands/: seed_categories.py
backend/apps/ingredients/migrations/: 0001_initial.py
backend/apps/pantry/: api.py  models.py  schemas.py  services.py
backend/apps/pantry/migrations/: 0001_initial.py
backend/apps/receipts/: api.py  models.py  schemas.py  validators.py
backend/apps/receipts/management/commands/: test_scan.py
backend/apps/receipts/migrations/: 0001_initial.py  0002_add_confirmed_status.py
backend/apps/receipts/services/: base.py  claude_ocr.py
backend/apps/recipes/: api.py  models.py  schemas.py
backend/apps/recipes/migrations/: 0001_initial.py
backend/apps/recipes/services/: base.py  spoonacular.py
backend/apps/users/: api.py  auth.py  models.py  schemas.py
backend/apps/users/management/commands/: gen_test_token.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: api.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_health.py  test_ingredients.py  test_pantry.py  test_receipts.py  test_recipes.py  test_users.py
docs/: deployment-checklist.md
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
frontend/e2e/: pantry-crud.spec.ts  recipe-save.spec.ts  scan-confirm.spec.ts
frontend/e2e/helpers/: auth.ts  mock-api.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx
frontend/src/components/: bottom-nav.tsx  expiry-badge.tsx  offline-banner.test.tsx  (+4 more)
mockups/: dashboard.html  login.html  pantry.html  recipe-detail.html  recipes.html  register.html  saved-recipes.html  scan-review.html  scan.html  shared.css
(+67 files in other folders)
