[project]
name = "pantrychef-backend"
version = "0.1.0"
description = "PantryChef — Recipe Generator Backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "django-ninja>=1.3,<2.0",
    "django-cors-headers>=4.6,<5.0",
    "uvicorn[standard]>=0.34,<1.0",
    "gunicorn>=23.0,<24.0",
    "whitenoise>=6.8,<7.0",
    "pyjwt>=2.10,<3.0",
    "dj-database-url>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.28,<1.0",
    "anthropic>=0.42,<1.0",
    "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
